changes to building info and map
auto zooms to building location
directions line works
building pictures work w/ 5 sec timeout